--- a/quadratic/index.html
+++ b/quadratic/index.html
@@ -1,9 +1,29 @@
 <head>
+    <link rel="stylesheet" href="styles.css"></link>
     <title>Quadratic Equation Calculator</title>
+    <script src="calc.js"></script>
 </head>
 <body>
-    <div class="equation-box">
-        <textarea class="number-box" id="box-a"></textarea>x<sup>2</sup> +
-        <textarea class="number-box" id="box-b"></textarea>x + B = 0
+    <div class="container">
+        <div class="equation-box">
+            <input type="number" class="number-box" id="box-a"></input>x<sup>2</sup> +
+            <input type="number" class="number-box" id="box-b"></input>x +
+            <input type="number" class="number-box" id="box-c"></input>= 0
+            <div>
+                <input type="button"
+                    id="calculate-button"
+                    value="Calculate"
+                    onclick="check_and_calculate()">
+                </button>
+            </div>
+        </div>
+        <div class="solution-box">
+            <div class="root">
+                <label id="root1">x1 = </label>
+            </div>
+            <div class="root">
+                <label id="root2">x2 = </label>
+            </div>
+        </div>
     </div>
 </body>
