--- a/quadratic/quadratic.html
+++ b/quadratic/quadratic.html
@@ -3,9 +3,9 @@
     <title>Quadratic Equation Calculator</title>
     <script src="calc.js"></script>
 </head>
-<body background="test.jpeg">
+<body class="main">
     <div class="container">
-        <div class="equation-box">
+            <div class="equation-box">
             <input type="number" class="number-box" id="box-a"></input>x<sup>2</sup> +
             <input type="number" class="number-box" id="box-b"></input>x +
             <input type="number" class="number-box" id="box-c"></input>= 0
@@ -19,10 +19,10 @@
         </div>
         <div class="solution-box">
             <div class="root">
-                <label id="root1">x1 = </label>
+                <label id="root1">x<sub>1</sub> = </label>
             </div>
             <div class="root">
-                <label id="root2">x2 = </label>
+                <label id="root2">x<sub>2</sub> = </label>
             </div>
         </div>
     </div>
