Even more changes

--- a/quadratic/index.html
+++ b/quadratic/index.html
@@ -3,27 +3,16 @@
     <title>Quadratic Equation Calculator</title>
     <script src="calc.js"></script>
 </head>
-<body background="test.jpeg">
-    <div class="container">
-        <div class="equation-box">
-            <input type="number" class="number-box" id="box-a"></input>x<sup>2</sup> +
-            <input type="number" class="number-box" id="box-b"></input>x +
-            <input type="number" class="number-box" id="box-c"></input>= 0
-            <div>
-                <input type="button"
-                    id="calculate-button"
-                    value="Calculate"
-                    onclick="check_and_calculate()">
-                </button>
-            </div>
-        </div>
-        <div class="solution-box">
-            <div class="root">
-                <label id="root1">x1 = </label>
-            </div>
-            <div class="root">
-                <label id="root2">x2 = </label>
-            </div>
-        </div>
+<body class="main">
+    <div class="container fade">
+        <h1>Quadratic equation calculator</h1>
+        <h3>Team members</h3>
+        Omar Adel Abdel Hamid Ahmed Brikaa<br />
+        Mostafa Hesham Ragab Allam<br />
+        Ali Esmat Ahmed Orfi<br />
+        <h3>Submitted to</h3>
+        Dr. Eng. Mostafa Reda Abdullah El Tantawi<br />
+        <a href="./quadratic.html"><button class="main-button">Start</button></a>
     </div>
+
 </body>
