--- a/quadratic/quadratic.html
+++ b/quadratic/quadratic.html
@@ -4,14 +4,14 @@
     <script src="calc.js"></script>
 </head>
 <body class="main">
-    <div class="container">
+    <div class="container fade">
             <div class="equation-box">
             <input type="number" class="number-box" id="box-a"></input>x<sup>2</sup> +
             <input type="number" class="number-box" id="box-b"></input>x +
             <input type="number" class="number-box" id="box-c"></input>= 0
             <div>
                 <input type="button"
-                    id="calculate-button"
+                    class="main-button"
                     value="Calculate"
                     onclick="check_and_calculate()">
                 </button>
