--- a/quadratic/html/quadratic.html
+++ b/quadratic/html/quadratic.html
@@ -1,7 +1,7 @@
 <head>
-    <link rel="stylesheet" href="styles.css"></link>
+    <link rel="stylesheet" href="../css/styles.css"></link>
     <title>Quadratic Equation Calculator</title>
-    <script src="calc.js"></script>
+    <script src="../js/calc.js"></script>
 </head>
 <body class="main">
     <div class="container fade">
