--- a/quadratic/index.html
+++ b/quadratic/index.html
@@ -1,7 +1,7 @@
 <head>
-    <link rel="stylesheet" href="styles.css"></link>
+    <link rel="stylesheet" href="css/styles.css"></link>
     <title>Quadratic Equation Calculator</title>
-    <script src="calc.js"></script>
+    <script src="js/calc.js"></script>
 </head>
 <body class="main">
     <div class="container fade">
@@ -12,7 +12,7 @@
         Ali Esmat Ahmed Orfi<br />
         <h3>Submitted to</h3>
         Dr. Eng. Mostafa Reda Abdullah El Tantawi<br />
-        <a href="./quadratic.html"><button class="main-button">Start</button></a>
+        <a href="html/quadratic.html"><button class="main-button">Start</button></a>
     </div>
 
 </body>
