--- a/quadratic/index.html
+++ b/quadratic/index.html
@@ -1,15 +1,17 @@
 <head>
     <link rel="stylesheet" href="css/styles.css"></link>
-    <title>Quadratic Equation Calculator</title>
+    <title>CS Math Society - Quadratic Equation Calculator</title>
     <script src="js/calc.js"></script>
 </head>
 <body class="main">
     <div class="container fade">
-        <h1>Quadratic equation calculator</h1>
+        <img src="resources/fci.png" class="logo"></img>
+        <img src="resources/cu.png" class="logo"></img>
+        <h1>CS Math Society - Quadratic equation calculator</h1>
         <h3>Team members</h3>
-        Omar Adel Abdel Hamid Ahmed Brikaa<br />
-        Mostafa Hesham Ragab Allam<br />
-        Ali Esmat Ahmed Orfi<br />
+        Omar Adel Abdel Hamid Ahmed Brikaa - 20206043<br />
+        Mostafa Hesham Ragab Allam - 20206126<br />
+        Ali Esmat Ahmed Orfi - 20206123<br />
         <h3>Submitted to</h3>
         Dr. Eng. Mostafa Reda Abdullah El Tantawi<br />
         <a href="html/quadratic.html"><button class="main-button">Start</button></a>
