Change fonts, file naming and complex formatting

--- a/quadratic/html/quadratic.html
+++ b/quadratic/html/quadratic.html
@@ -1,14 +1,14 @@
 <head>
-    <link rel="stylesheet" href="../css/styles.css"></link>
+    <link rel="stylesheet" href="../css/global.css"></link>
     <title>Quadratic Equation Calculator</title>
-    <script src="../js/calc.js"></script>
+    <script src="../js/quadratic.js"></script>
 </head>
-<body class="main">
-    <div class="container fade">
+<body>
+    <div class="container fade text-monospace">
             <div class="equation-box">
             <input type="number" class="number-box" id="box-a"></input>x<sup>2</sup> +
             <input type="number" class="number-box" id="box-b"></input>x +
-            <input type="number" class="number-box" id="box-c"></input>= 0
+            <input type="number" class="number-box" id="box-c"></input> = 0
             <div>
                 <input type="button"
                     class="main-button"
