--- a/quadratic/index.html
+++ b/quadratic/index.html
@@ -1,9 +1,8 @@
 <head>
-    <link rel="stylesheet" href="css/styles.css"></link>
+    <link rel="stylesheet" href="css/global.css"></link>
     <title>CS Math Society - Quadratic Equation Calculator</title>
-    <script src="js/calc.js"></script>
 </head>
-<body class="main">
+<body>
     <div class="container fade">
         <img src="resources/fci.png" class="logo"></img>
         <img src="resources/cu.png" class="logo"></img>
