--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <head>
     <link rel="stylesheet" href="css/global.css"></link>
-    <title>CS Math Society - Quadratic Equation Calculator</title>
+    <title>CS Math Society</title>
 </head>
 <body>
     <div class="container fade">
         <img src="resources/fci.png" class="logo"></img>
         <img src="resources/cu.png" class="logo"></img>
-        <h1>CS Math Society - Quadratic equation calculator</h1>
+        <h1>CS Math Society</h1>
         <h3>Team members</h3>
         Omar Adel Abdel Hamid Ahmed Brikaa - 20206043<br />
         Mostafa Hesham Ragab Allam - 20206126<br />
         Ali Esmat Ahmed Orfi - 20206123<br />
         <h3>Submitted to</h3>
-        Dr. Eng. Mostafa Reda Abdullah El Tantawi<br />
-        <a href="html/quadratic.html"><button class="main-button">Start</button></a>
+        Dr. Eng. Mostafa Reda A. El Tantawi<br />
+        <a href="html/quadratic.html"><button class="main-button">Quadratic Equation Calculator</button></a><br />
+        <a href="html/minmaxsort.html"><button class="main-button">Min Max Sort</button></a>
     </div>
 
 </body>
