--- a/html/minmaxsort.html
+++ b/html/minmaxsort.html
@@ -12,7 +12,7 @@
                 <input type="button"
                     class="main-button"
                     value="Sort"
-                    onclick="">
+                    onclick="sort()">
                 </input>
             </div>
         </div>
