--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
         Omar Adel Abdel Hamid Ahmed Brikaa - 20206043<br />
         Mostafa Hesham Ragab Allam - 20206126<br />
         Ali Esmat Ahmed Orfi - 20206123<br />
+        Ahmed Wael Nagy Wanas - 20206008<br />
         <h3>Submitted to</h3>
         Dr. Eng. Mostafa Reda A. El Tantawi<br />
-        <a href="html/quadratic.html"><button class="main-button">Quadratic Equation Calculator</button></a><br />
-        <a href="html/minmaxsort.html"><button class="main-button">Min Max Sort</button></a>
+        <h3>Projects</h3>
+        <a href="html/quadratic.html">Quadratic Equation Calculator</a><br />
+        <a href="html/minmaxsort.html">Min Max Sort</a>
     </div>
 
 </body>
