Show the index of min/max

--- a/html/minmaxsort.html
+++ b/html/minmaxsort.html
@@ -19,16 +19,16 @@
         </div>
         <div class="solution-box">
             <div>
-                <label id="min">Minimum value = </label>
+                <label id="min">Minimum value: </label>
             </div>
             <div>
-                <label id="max">Maximum value = </label>
+                <label id="max">Maximum value: </label>
             </div>
             <div>
-                <label id="number-elements">Number of elements = </label>
+                <label id="number-elements">Number of elements: </label>
             </div>
             <div>
-                <label id="array">Sorted array = </label>
+                <label id="array">Sorted array: </label>
             </div>
         </div>
     </div>
