--- a/html/minmaxsort.html
+++ b/html/minmaxsort.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <div class="container fade fixed-width text-monospace">
+    <div class="container fade text-monospace">
         <div class="equation-box">
             <input id="arr-text-box" placeholder="Enter the numbers separated by space" class="text-box">
             <div class="button-div">
