Make it better for phone screens

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
     <link rel="stylesheet" href="css/global.css"></link>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CS Math Society</title>
 </head>
 <body>
