--- a/html/minmaxsort.html
+++ b/html/minmaxsort.html
@@ -2,6 +2,7 @@
     <link rel="stylesheet" href="../css/global.css"></link>
     <link rel="stylesheet" href="../css/minmaxsort.css"></link>
     <script src="../js/minmaxsort.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Min Max Sort</title>
 </head>
 
