--- a/html/quadratic.html
+++ b/html/quadratic.html
@@ -1,23 +1,24 @@
 <head>
     <link rel="stylesheet" href="../css/global.css"></link>
     <script src="../js/quadratic.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Quadratic Equation Calculator</title>
 </head>
 
 <body>
     <div class="container fade text-monospace">
             <div class="equation-box">
-            <input type="number" class="number-box" id="box-a"></input>x<sup>2</sup> +
-            <input type="number" class="number-box" id="box-b"></input>x +
-            <input type="number" class="number-box" id="box-c"></input> = 0
-            <div>
-                <input type="button"
-                    class="main-button"
-                    value="Calculate"
-                    onclick="check_and_calculate()">
-                </button>
+                <input type="number" class="number-box" id="box-a"></input>x<sup>2</sup> +
+                <input type="number" class="number-box" id="box-b"></input>x +
+                <input type="number" class="number-box" id="box-c"></input> = 0
+                <div>
+                    <input type="button"
+                        class="main-button"
+                        value="Calculate"
+                        onclick="check_and_calculate()">
+                    </button>
+                </div>
             </div>
-        </div>
         <div class="solution-box">
             <div class="root">
                 <label id="root1">x<sub>1</sub> = </label>
