--- a/html/stat.html
+++ b/html/stat.html
@@ -1,7 +1,7 @@
 <head>
     <link rel="stylesheet" href="../css/global.css"></link>
-    <link rel="stylesheet" href="../css/minmaxsort.css"></link>
-    <script src="../js/minmaxsort.js"></script>
+    <link rel="stylesheet" href="../css/stat.css"></link>
+    <script src="../js/stat.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Min Max Sort</title>
 </head>
