--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <h3>Submitted to</h3>
         Dr. Eng. Mostafa Reda A. El Tantawi<br />
         <h3>Projects</h3>
-        <a href="html/quadratic.html">Quadratic Equation Calculator</a><br />
-        <a href="html/minmaxsort.html">Min Max Sort</a>
+        <a href="html/solver.html">Equation solver</a><br />
+        <a href="html/stat.html">Statistics Calculator</a>
     </div>
 
 </body>
