--- a/html/solver.html
+++ b/html/solver.html
@@ -2,6 +2,7 @@
     <link rel="stylesheet" href="../css/global.css">
     </link>
     <script src="../js/solver.js"></script>
+    <script src="../js/global.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Equation solver</title>
 </head>
@@ -25,14 +26,19 @@
             <input type="number" class="number-box" id="box-c"></input> = 0
             <div>
                 <input type="button" class="main-button" value="Calculate" onclick="check_and_calculate()">
+                <input type="button" class="danger-button" value="Clear"
+                    onclick="clear_elements(['number-box', 'solution-label'])">
+                </input>
             </div>
         </div>
         <div class="solution-box">
             <div class="root">
-                <label id="root1">x<sub>1</sub> = </label>
+                <label>x<sub>1</sub> = </label>
+                <label class="solution-label" id="root1"></label>
             </div>
             <div class="root">
-                <label id="root2">x<sub>2</sub> = </label>
+                <label>x<sub>2</sub> = </label>
+                <label class="solution-label" id="root2"></label>
             </div>
         </div>
     </div>
