--- a/html/stat.html
+++ b/html/stat.html
@@ -1,6 +1,7 @@
 <head>
     <link rel="stylesheet" href="../css/global.css"></link>
     <link rel="stylesheet" href="../css/stat.css"></link>
+    <script src="../js/global.js"></script>
     <script src="../js/stat.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Min Max Sort</title>
@@ -13,23 +14,32 @@
             <div class="button-div">
                 <input type="button"
                     class="main-button"
-                    value="Sort"
-                    onclick="sort()">
+                    value="Calculate"
+                    onclick="calculate_stats()">
+                </input>
+                <input type="button"
+                    class="danger-button"
+                    value="Clear"
+                    onclick="clear_elements(['text-box', 'solution-label'])">
                 </input>
             </div>
         </div>
         <div class="solution-box">
             <div>
-                <label id="min">Minimum value: </label>
+                <label>Minimum value: </label>
+                <label class="solution-label" id="min"></label>
             </div>
             <div>
-                <label id="max">Maximum value: </label>
+                <label>Maximum value: </label>
+                <label class="solution-label" id="max"></label>
             </div>
             <div>
-                <label id="number-elements">Number of elements: </label>
+                <label>Number of elements: </label>
+                <label class="solution-label" id="number-elements"></label>
             </div>
             <div>
-                <label id="array">Sorted array: </label>
+                <label>Sorted array: </label>
+                <label class="solution-label" id="array"></label>
             </div>
         </div>
     </div>
