--- a/html/solver.html
+++ b/html/solver.html
@@ -10,6 +10,9 @@
 <body>
     <div class="container fade text-monospace">
         <div>
+            <a href="../index.html">Home</a>
+        </div>
+        <div>
             <select class="dropdown">
                 <option value="quadratic">Quadratic Equation</option>
             </select>
