--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         Dr. Eng. Mostafa Reda A. El Tantawi<br />
         <h3>Projects</h3>
         <a href="html/solver.html">Equation solver</a><br />
-        <a href="html/stat.html">Statistics Calculator</a>
+        <a href="html/stat.html">Statistics Calculator</a><br />
+        <div class="exit">
+            <a href="html/thankyou.html" onclick="window.close()">Exit</a>
+        </div>
     </div>
 
 </body>
