--- a/html/stat.html
+++ b/html/stat.html
@@ -9,6 +9,9 @@
 
 <body>
     <div class="container fade text-monospace">
+        <div>
+            <a href="../index.html">Home</a>
+        </div>
         <div class="equation-box">
             <input id="arr-text-box" placeholder="Enter the numbers separated by space" class="text-box">
             <div class="button-div">
