Implement measures of central tendency

--- a/html/stat.html
+++ b/html/stat.html
@@ -29,6 +29,15 @@
         </div>
         <div class="solution-box">
             <div>
+                <label>Sorted array: </label>
+                <label class="solution-label" id="array"></label>
+            </div>
+            <h5>Simple operations</h5>
+            <div>
+                <label>Sum of the elements: </label>
+                <label class="solution-label" id="sum"></label>
+            </div>
+            <div>
                 <label>Minimum value: </label>
                 <label class="solution-label" id="min"></label>
             </div>
@@ -37,12 +46,54 @@
                 <label class="solution-label" id="max"></label>
             </div>
             <div>
-                <label>Number of elements: </label>
+                <label>Number of the elements: </label>
                 <label class="solution-label" id="number-elements"></label>
             </div>
+            <h5>Measures of central tendency</h5>
             <div>
-                <label>Sorted array: </label>
-                <label class="solution-label" id="array"></label>
+                <label>Mean: </label>
+                <label class="solution-label" id="mean"></label>
+            </div>
+            <div>
+                <label>Median (second quartile): </label>
+                <label class="solution-label" id="median"></label>
+            </div>
+            <div>
+                <label>Mode: </label>
+                <label class="solution-label" id="mode"></label>
+            </div>
+            <h5>Measures of dispersion</h5>
+            <div>
+                <label>First quartile: </label>
+                <label class="solution-label" id="first-quartile"></label>
+            </div>
+            <div>
+                <label>Third quartile: </label>
+                <label class="solution-label" id="third-quartile"></label>
+            </div>
+            <div>
+                <label>Interquartile range: </label>
+                <label class="solution-label" id="iqr"></label>
+            </div>
+            <div>
+                <label>Upper bound: </label>
+                <label class="solution-label" id="upper-bound"></label>
+            </div>
+            <div>
+                <label>Lower bound: </label>
+                <label class="solution-label" id="lower-bound"></label>
+            </div>
+            <div>
+                <label>Outliers: </label>
+                <label class="solution-label" id="outliers"></label>
+            </div>
+            <div>
+                <label>Variance: </label>
+                <label class="solution-label" id="variance"></label>
+            </div>
+            <div>
+                <label>Standard deviation: </label>
+                <label class="solution-label" id="standard-deviation"></label>
             </div>
         </div>
     </div>
