--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h3>Projects</h3>
         <a href="html/solver.html">Equation solver</a><br />
         <a href="html/stat.html">Statistics Calculator</a><br />
-        <div class="exit">
+        <div class="bottom-buttons">
             <a href="html/thankyou.html" onclick="window.close()">Exit</a>
         </div>
     </div>
