Add measures of dispersion

--- a/html/stat.html
+++ b/html/stat.html
@@ -55,7 +55,7 @@
                 <label class="solution-label" id="mean"></label>
             </div>
             <div>
-                <label>Median (second quartile): </label>
+                <label>Median: </label>
                 <label class="solution-label" id="median"></label>
             </div>
             <div>
@@ -63,6 +63,10 @@
                 <label class="solution-label" id="mode"></label>
             </div>
             <h5>Measures of dispersion</h5>
+            <div>
+                <label>Range: </label>
+                <label class="solution-label" id="range"></label>
+            </div>
             <div>
                 <label>First quartile: </label>
                 <label class="solution-label" id="first-quartile"></label>
@@ -88,12 +92,20 @@
                 <label class="solution-label" id="outliers"></label>
             </div>
             <div>
-                <label>Variance: </label>
-                <label class="solution-label" id="variance"></label>
+                <label>Sample Variance: </label>
+                <label class="solution-label" id="sample-variance"></label>
             </div>
             <div>
-                <label>Standard deviation: </label>
-                <label class="solution-label" id="standard-deviation"></label>
+                <label>Population Variance: </label>
+                <label class="solution-label" id="population-variance"></label>
+            </div>
+            <div>
+                <label>Population S.D.: </label>
+                <label class="solution-label" id="population-sd"></label>
+            </div>
+            <div>
+                <label>Sample S.D: </label>
+                <label class="solution-label" id="sample-sd"></label>
             </div>
         </div>
     </div>
