Proposed styling changes

--- a/html/solver.html
+++ b/html/solver.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container fade text-monospace">
         <div>
-            <a href="../index.html">Home</a>
+            <a href="../index.html" class="nav-button">Home</a>
         </div>
         <div>
             <select class="dropdown">
