--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 </head>
 <body>
     <div class="container fade">
-        <img src="resources/fci.png" class="logo"></img>
-        <img src="resources/cu.png" class="logo"></img>
+        <img src="resources/fci.png" class="logo float-left"></img>
+        <img src="resources/cu.png" class="logo float-right"></img>
         <h1>CS Math Society</h1>
+        <h3>Projects</h3>
+        <a href="html/solver.html" class="nav-button">Equation solver</a><br />
+        <a href="html/stat.html" class="nav-button">Statistics Calculator</a><br />
         <h3>Team members</h3>
         Omar Adel Abdel Hamid Ahmed Brikaa - 20206043<br />
         Mostafa Hesham Ragab Allam - 20206126<br />
@@ -15,9 +18,6 @@
         Ahmed Wael Nagy Wanas - 20206008<br />
         <h3>Submitted to</h3>
         Dr. Eng. Mostafa Reda A. El Tantawi<br />
-        <h3>Projects</h3>
-        <a href="html/solver.html">Equation solver</a><br />
-        <a href="html/stat.html">Statistics Calculator</a><br />
         <div class="bottom-buttons">
             <a href="html/thankyou.html" onclick="window.close()">Exit</a>
         </div>
