--- a/html/stat.html
+++ b/html/stat.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container fade text-monospace">
         <div>
-            <a href="../index.html">Home</a>
+            <a href="../index.html" class="nav-button">Home</a>
         </div>
         <div class="equation-box">
             <input id="arr-text-box" placeholder="Enter the numbers separated by space" class="text-box">
