--- a/html/thankyou.html
+++ b/html/thankyou.html
@@ -5,8 +5,9 @@
 </head>
 <body>
     <div class="container fade">
-        <img src="../resources/fci.png" class="logo"></img>
-        <img src="../resources/cu.png" class="logo"></img>
+        <img src="../resources/fci.png" class="logo float-left"></img>
+        <img src="../resources/cu.png" class="logo float-right"></img>
+        <h1>CS Math Society</h1>
         <div>
             Thank you for using our tools. We were unable to close your browser since you were using it. You can close
             it manually now.
