--- a/html/stat.html
+++ b/html/stat.html
@@ -21,7 +21,7 @@
                     onclick="calculate_stats()">
                 </input>
                 <input type="button"
-                    class="danger-button"
+                    class="main-button danger"
                     value="Clear"
                     onclick="clear_elements(['text-box', 'solution-label'])">
                 </input>
