Add Viete's algorithm

--- a/html/solver.html
+++ b/html/solver.html
@@ -31,5 +31,8 @@
         </div>
         <div class="solution-box">
         </div>
+        <div class="algorithm-box">
+            <label class="algorithm-label" id="algorithm-label"></label>
+        </div>
     </div>
 </body>
