--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         Ahmed Wael Nagy Wanas - 20206008<br />
         <h3>Submitted to</h3>
         Dr. Eng. Mostafa Reda A. El Tantawi<br />
+        <h3>Helpful references</h3>
+        <a href="https://quarticequations.com/Cubic.pdf" target="_blank">
+            Practical Algorithms for solving a cubic equation
+        </a>
         <div class="bottom-buttons">
             <a href="html/thankyou.html" onclick="window.close()">Exit</a>
         </div>
