Add statistics symbols

--- a/html/stat.html
+++ b/html/stat.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="container fade text-monospace">
+    <div class="container medium-container fade text-monospace">
         <div>
             <a href="../index.html" class="nav-button">Home</a>
         </div>
@@ -51,7 +51,7 @@
             </div>
             <h5>Measures of central tendency</h5>
             <div>
-                <label>Mean: </label>
+                <label>Mean (&mu;): </label>
                 <label class="solution-label" id="mean"></label>
             </div>
             <div>
@@ -92,19 +92,19 @@
                 <label class="solution-label" id="outliers"></label>
             </div>
             <div>
-                <label>Sample Variance: </label>
-                <label class="solution-label" id="sample-variance"></label>
-            </div>
-            <div>
-                <label>Population Variance: </label>
+                <label>Population Var. (&#963;<sup>2</sup>): </label>
                 <label class="solution-label" id="population-variance"></label>
             </div>
             <div>
-                <label>Population S.D.: </label>
+                <label>Sample Var. (s<sup>2</sup>): </label>
+                <label class="solution-label" id="sample-variance"></label>
+            </div>
+            <div>
+                <label>Population S.D. (&#963;): </label>
                 <label class="solution-label" id="population-sd"></label>
             </div>
             <div>
-                <label>Sample S.D: </label>
+                <label>Sample S.D (s): </label>
                 <label class="solution-label" id="sample-sd"></label>
             </div>
         </div>
