Optimize outliers algorithm & disable quartic

--- a/html/solver.html
+++ b/html/solver.html
@@ -16,7 +16,7 @@
             <select class="dropdown" onchange="handle_change(this)">
                 <option value="quad">Quadratic Equation</option>
                 <option value="cubic">Cubic Equation</option>
-                <option value="quart">Quartic Equation</option>
+                <!-- <option value="quart">Quartic Equation</option> -->
             </select>
         </div>
         <div class="equation-box">
