--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         Dr. Eng. Mostafa Reda A. El Tantawi<br />
         <h3>Helpful references</h3>
         <a href="https://quarticequations.com/Cubic.pdf" target="_blank">
-            Practical Algorithms for solving a cubic equation
+            Practical algorithms for solving a cubic equation
         </a>
         <div class="bottom-buttons">
             <a href="html/thankyou.html" onclick="window.close()">Exit</a>
