Add quartic reference

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <h3>Helpful references</h3>
         <a href="https://quarticequations.com/Cubic.pdf" target="_blank">
             Practical algorithms for solving a cubic equation
+        </a><br />
+        <a href="https://quarticequations.com/Quartic.pdf" target="_blank">
+            Practical algorithms for solving a quartic equation
         </a>
         <div class="bottom-buttons">
             <a href="html/thankyou.html" onclick="window.close()">Exit</a>
