--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         Mostafa Hesham Ragab Allam - 20206126<br />
         Ali Esmat Ahmed Orfi - 20206123<br />
         Ahmed Wael Nagy Wanas - 20206008<br />
-        <h3>Submitted to</h3>
+        <h3>Under the supervision of</h3>
         Dr. Eng. Mostafa Reda A. El Tantawi<br />
         <h3>Helpful references</h3>
         <a href="https://quarticequations.com/Cubic.pdf" target="_blank">
