--- a/html/solver.html
+++ b/html/solver.html
@@ -25,7 +25,7 @@
             <div>
                 <input type="button" class="main-button" value="Calculate" onclick="check_and_calculate()">
                 <input type="button" class="main-button danger" value="Clear"
-                    onclick="clear_elements(['number-box', 'solution-label'])">
+                    onclick="clear_elements(['number-box', 'solution-label', 'algorithm-label'])">
                 </input>
             </div>
         </div>
