Add GitHub link

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             Practical algorithms for solving a quartic equation
         </a>
         <div class="bottom-buttons">
+            <a href="https://github.com/cs-math/cs-math.github.io" target="_blank">Code on GitHub</a><br />
             <a href="html/thankyou.html" onclick="window.close()">Exit</a>
         </div>
     </div>
