--- a/html/solver.html
+++ b/html/solver.html
@@ -13,8 +13,9 @@
             <a href="../index.html" class="nav-button">Home</a>
         </div>
         <div>
-            <select class="dropdown" onchange="handle_change(this)">
+            <select class="dropdown" id="equation-dropdown" onchange="handle_change(this)">
                 <option value="" selected disabled hidden>Choose an equation type</option>
+                <option value="linear">Linear Equation</option>
                 <option value="quad">Quadratic Equation</option>
                 <option value="cubic">Cubic Equation</option>
                 <option value="quart">Quartic Equation</option>
