Hide curve fitter

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h3>Projects</h3>
         <a href="html/solver.html" class="nav-button">Equation solver</a><br />
         <a href="html/stat.html" class="nav-button">Statistics Calculator</a><br />
-        <a href="html/fitting.html" class="nav-button">Curve Fitting</a><br />
+        <!-- <a href="html/fitting.html" class="nav-button">Curve Fitting</a><br /> -->
         <h3>Team members</h3>
         Omar Adel Abdel Hamid Ahmed Brikaa - 20206043<br />
         Mostafa Hesham Ragab Allam - 20206126<br />
