AVM striaght line fitting

--- a/html/fitting.html
+++ b/html/fitting.html
@@ -18,13 +18,16 @@
                 <input type="button"
                     class="main-button"
                     value="Calculate"
-                    onclick="determine_straight_line()">
+                    onclick="choose_fitting_method()">
                 </input>
                 <input type="button"
                     class="main-button danger"
                     value="Clear"
                     onclick="clear_elements(['text-box', 'solution-label'])">
                 </input>
+            </div>
+            <div class="solution-box">
+                <label class="solution" id="solution-label"></label>
             </div>
         </div>
     </div>
