Improve rounding, add AVM test case

--- a/html/fitting.html
+++ b/html/fitting.html
@@ -27,7 +27,7 @@
                 </input>
             </div>
             <div class="solution-box">
-                <label class="solution" id="solution-label"></label>
+                <label class="solution-label" id="equation-label"></label>
             </div>
         </div>
     </div>
