--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href="html/solver.html" class="nav-button">Equation Solver</a><br />
         <a href="html/stat.html" class="nav-button">Statistics Calculator</a><br />
         <a href="html/fitting.html" class="nav-button">Curve Fitting</a><br />
+        <a href="html/matrix.html" class="nav-button">Linear Algebra</a><br />
         <h3>Team members</h3>
         Omar Adel Abdel Hamid Ahmed Brikaa - 20206043<br />
         Mostafa Hesham Ragab Allam - 20206126<br />
