--- a/html/matrix.html
+++ b/html/matrix.html
@@ -19,15 +19,14 @@
         </div>
         <div class="control-buttons">
             <input type="button" class="main-button" value="Add a matrix" onclick="draw_matrix_area()">
-            <input type="button" class="main-button" id="remove-button"
-            value="Remove a matrix"
-            disabled="true"
-            onclick="remove_matrix_area()">
+            <input type="button" class="main-button" id="remove-button" value="Remove a matrix" disabled="true"
+                onclick="remove_matrix_area()">
         </div>
         <div class="control-buttons">
             <input type="button" class="main-button" value="Properties" onclick="get_matrices_properties()">
             </input>
-            <input type="button" class="main-button" value="Operations" onclick="do_matrices_operations()">
+            <input type="button" class="main-button" id="operations-button" disabled="true" value="Operations"
+                onclick="do_matrices_operations()">
             </input>
             <input type="button" class="main-button danger" value="Clear" onclick="clear_matrix_elements()">
             </input>
