--- a/html/matrix.html
+++ b/html/matrix.html
@@ -59,5 +59,9 @@
                 <label>Difference: </label>
                 <div class="solution-label matrix-div" id="difference"></div>
             </div>
+            <div>
+                <label>Product: </label>
+                <div class="solution-label matrix-div" id="product"></div>
+            </div>
         </div>
 </body>
