--- a/html/matrix.html
+++ b/html/matrix.html
@@ -32,7 +32,6 @@
             </input>
         </div>
         <div class="solution-box">
-            <label class="validation-label" id="validation"></label>
             <h5>Properties</h5>
             <div>
                 <label>Order: </label>
@@ -49,6 +48,10 @@
             <div>
                 <label>Equality: </label>
                 <label class="solution-label" id="equality"></label>
+            </div>
+            <div>
+                <label>Commutes: </label>
+                <label class="solution-label" id="commutes"></label>
             </div>
             <h5>Operations</h5>
             <div>
