--- a/html/matrix.html
+++ b/html/matrix.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/matrix.css">
     </link>
+    <script src="../scripts/math.min.js"></script>
     <script src="../js/global.js"></script>
     <script src="../js/matrix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
